--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "Remove Duplicated Lines",
 	"description": "Remove all lines that appear two or more times in a text. (leave no line behind)",
 	"version": "0.0.1",
+	"icon": "images/icon.png",
 	"engines": {
 		"vscode": "^1.45.0"
 	},
