--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"description": "Remove all lines that appear two or more times in a text. (leave no line behind)",
 	"version": "0.0.1",
 	"icon": "images/icon.png",
+	"publisher": "Alon Arad",
+	"repository": "https://github.com/AradAlon/remove-duplicated-lines",
 	"engines": {
 		"vscode": "^1.45.0"
 	},
